Index 100% - fill table - 100%

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -106,133 +106,8 @@ TODO importante // realtando algo
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Nuestra colección más reciente</h1>
 
         <!-- Contenedor de las tarjetas de la colección -->
-        <div class="containerCards d-flex flex-nowrap">
-            <!-- Tarjeta 1 -->
-            <div class="card col-4 cardC">
-                <!-- Enlace a la página de detalles del zapato -->
-                <a href="/vistas/publico/detalle_zapato.html" class="text15">
-                    <!-- Contenedor de la imagen del zapato -->
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
-                        <!-- Imagen del zapato -->
-                    </div>
-                    <!-- Línea decorativa debajo de la imagen -->
-                    <div class="lineImgC"></div>
-                    <!-- Cuerpo de la tarjeta -->
-                    <div class="card-body">
-                        <!-- División de dos columnas -->
-                        <div class="d-flex flex-row justify-content-between">
-                            <!-- Columna 1 -->
-                            <div class="column1 ps-3">
-                                <!-- Nombre del zapato -->
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <!-- Descripción del zapato -->
-                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
-                                </h1>
-                                <!-- División para icono de estrella y calificación -->
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <!-- Icono de estrella -->
-                                    <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
-                                    <!-- Calificación del zapato -->
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-                            <!-- Columna 2 -->
-                            <div class="column2 align-items-center">
-                                <!-- Número de colores disponibles -->
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <!-- Precio del zapato -->
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4 cardC">
-                <a href="/vistas/publico/detalle_zapato.html" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1 ps-3">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2 align-items-center">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4 cardC">
-                <a href="/vistas/publico/detalle_zapato.html" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1 ps-3">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2 align-items-center">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4 cardC">
-                <a href="/vistas/publico/detalle_zapato.html" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1 ps-3">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2 align-items-center">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
+        <div class="containerCards d-flex flex-nowrap" id="container_coleccion_reciente">
+            
         </div>
         <!-- Espacio en la parte inferior -->
         <div class="pb-3"></div>
@@ -242,132 +117,7 @@ TODO importante // realtando algo
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Selección especial de nuestro equipo</h1>
 
         <!-- Contenedor de las tarjetas de la selección especial -->
-        <div class="containerCards d-flex flex-nowrap">
-            <!-- Tarjeta 1 -->
-            <div class="card col-4 cardC">
-                <!-- Enlace a la página de detalles del zapato -->
-                <a href="/vistas/publico/detalle_zapato.html" class="text15">
-                    <!-- Contenedor de la imagen del zapato -->
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
-                        <!-- Imagen del zapato -->
-                    </div>
-                    <!-- Línea decorativa debajo de la imagen -->
-                    <div class="lineImgC"></div>
-                    <!-- Cuerpo de la tarjeta -->
-                    <div class="card-body">
-                        <!-- División de dos columnas -->
-                        <div class="d-flex flex-row justify-content-between">
-                            <!-- Columna 1 -->
-                            <div class="column1 ps-3">
-                                <!-- Nombre del zapato -->
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <!-- Descripción del zapato -->
-                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
-                                </h1>
-                                <!-- División para icono de estrella y calificación -->
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <!-- Icono de estrella -->
-                                    <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
-                                    <!-- Calificación del zapato -->
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-                            <!-- Columna 2 -->
-                            <div class="column2 align-items-center">
-                                <!-- Número de colores disponibles -->
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <!-- Precio del zapato -->
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            
-            <div class="card col-4 cardC">
-                <a href="/vistas/publico/detalle_zapato.html" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1 ps-3">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2 align-items-center">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4 cardC">
-                <a href="/vistas/publico/detalle_zapato.html" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1 ps-3">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2 align-items-center">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4 cardC">
-                <a href="/vistas/publico/detalle_zapato.html" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1 ps-3">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3 mt-2">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2 align-items-center">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
+        <div class="containerCards d-flex flex-nowrap" id="container_coleccion_especial">
         </div>
         <div class="pb-3"></div>
 
