Detalles zapato progreso 70% - Falta insertar en carrito(Pedir)

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -106,9 +106,7 @@ TODO importante // realtando algo
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Nuestra colección más reciente</h1>
 
         <!-- Contenedor de las tarjetas de la colección -->
-        <div class="containerCards d-flex flex-nowrap" id="container_coleccion_reciente">
-            
-        </div>
+        <div class="containerCards d-flex flex-nowrap" id="container_coleccion_reciente"></div>
         <!-- Espacio en la parte inferior -->
         <div class="pb-3"></div>
 
