PArte del buscador ya con el 50%

--- a/vistas/publico/buscador.html
+++ b/vistas/publico/buscador.html
@@ -33,24 +33,18 @@
                 id="encabezadoBuscador">
                 <!-- Div de la imagen -->
                 <div class="col-lg-2 col-md-4 col-sm-5 col-5 d-flex justify-content-center align-items-center me-4">
-                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="Foto de la marca" id="imagenMarca">
+                    <img src="" alt="Foto de la marca" id="imagenMarca">
                 </div>
                 <!-- Div del texto -->
                 <div
                     class="col-lg-9 col-sm-12 col-12 col-md-7 d-flex flex-row justify-content-center align-items-center ms-5 ms-sm-0">
                     <div class="col-lg-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
                         <h1 class="titillium-web-bold col-lg-12 pb-0 mb-0 mt-sm-3" id="nombreDeLaMarca">
-                            Adidas <!-- Título de la marca -->
+                            <!-- Título de la marca -->
                         </h1>
                         <!--DESCRIPCION DE LA MARCA-->
                         <p class="titillium-web col-lg-12 col-sm-12 mt-sm-3" id="descripcionDeLaMarca">
-                            Zapatos de tacón alto de alta calidad y atractivos. Nos especializamos en tallas grandes,
-                            llegando hasta la talla italiana 46. Diseñados para mujeres altas, hombres que disfrutan de
-                            usar tacones y cualquier persona que ame lucir zapatos de tacón alto. Nuestra colección
-                            ofrece elegancia y comodidad, con atención especial a los detalles y un enfoque inclusivo
-                            que celebra la diversidad de estilos y tallas. Descubre la moda sin límites con nuestros
-                            zapatos que combinan estilo y sofisticación, ideales para aquellos que desean destacar con
-                            confianza en cualquier ocasión.
+                            
                         </p>
                     </div>
                 </div>
@@ -322,115 +316,7 @@
                         <div class="col-lg-12 col-12">
                             <div class="row col-lg-12 col-12 justify-content-center mb-4" id="cardsZapato">
                                 <!--CONTENEDOR DE LA CARD DE ZAPATOS-->
-                                
-                                <!--CONTENEDOR DE LA CARD-->
-                                <div class="col-lg-4 col-md-3 col-sm-6">
-                                    <!--inicio de la card-->
-                                    <div class="card col-lg-12 col-md-12 col-sm-12" id="cardC">
-                                        <a href="detalle_zapato.html" class="text15">
-                                            <div class="image-wrapper2 col-lg-12">
-                                                <img src="../../recursos/imagenes/airJordan1.svg" id="imagenZapato"
-                                                    alt="...">
-                                            </div>
-                                            <div class="lineImgC"></div>
-                                            <div class="card-body">
-                                                <div class="d-flex flex-column col-lg-12 col-md-12 col-sm-12">
-                                                    <div class="d-flex col-lg-12 col-md-12 col-sm-12">
-                                                        <div class="d-flex flex-column col-lg-8 col-md-8 col-sm-8">
-                                                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                                                <h1 class="col-lg-12 col-md-12 col-sm-12 titillium-web-bold text18 text-black mb-0"
-                                                                    id="nombre">
-                                                                    Air Jordan 3
-                                                                </h1>
-                                                                <p class="col-lg-12 col-md-12 col-sm-12 titillium-web-extralight text12 clgr3 mt-0"
-                                                                    id="categoria">
-                                                                    Zapato UNISEX
-                                                                </p>
-                                                            </div>
-                                                        </div>
-                                                        <div class="d-flex col-lg-4 col-md-4 col-sm-4">
-                                                            <div
-                                                                class="d-flex col-lg-12 col-md-12 col-sm-12 justify-content-end">
-                                                                <p class="col-lg-11 titillium-web-extralight text12 clgr3"
-                                                                    id="colores">
-                                                                    5 colores</p>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="d-flex col-lg-12 col-md-12 col-sm-12">
-                                                        <div
-                                                            class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row align-items-center">
-                                                            <img src="../../recursos/imagenes/icons/starFill.svg"
-                                                                alt="">
-                                                            <p class="titillium-web-bold text12 m-0 align-baselin clYellowStar mt-1"
-                                                                id="calificacionZapato">
-                                                                5</p>
-                                                        </div>
-                                                        <div
-                                                            class="d-flex col-lg-6 col-md-6 col-sm-6 justify-content-end align-items-center">
-                                                            <h1 class="titillium-web-bold text15 text-black d-flex align-items-center mt-1"
-                                                                id="precioZapato"> $285</h1>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                                <!--CONTENEDOR DE LA CARD-->
-                                <div class="col-lg-4 col-md-3 col-sm-6">
-                                    <!--inicio de la card-->
-                                    <div class="card col-lg-12 col-md-12 col-sm-12" id="cardC">
-                                        <a href="detalle_zapato.html" class="text15">
-                                            <div class="image-wrapper2 col-lg-12">
-                                                <img src="../../recursos/imagenes/airJordan1.svg" id="imagenZapato"
-                                                    alt="...">
-                                            </div>
-                                            <div class="lineImgC"></div>
-                                            <div class="card-body">
-                                                <div class="d-flex flex-column col-lg-12 col-md-12 col-sm-12">
-                                                    <div class="d-flex col-lg-12 col-md-12 col-sm-12">
-                                                        <div class="d-flex flex-column col-lg-8 col-md-8 col-sm-8">
-                                                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                                                <h1 class="col-lg-12 col-md-12 col-sm-12 titillium-web-bold text18 text-black mb-0"
-                                                                    id="nombre">
-                                                                    Air Jordan 3
-                                                                </h1>
-                                                                <p class="col-lg-12 col-md-12 col-sm-12 titillium-web-extralight text12 clgr3 mt-0"
-                                                                    id="categoria">
-                                                                    Zapato UNISEX
-                                                                </p>
-                                                            </div>
-                                                        </div>
-                                                        <div class="d-flex col-lg-4 col-md-4 col-sm-4">
-                                                            <div
-                                                                class="d-flex col-lg-12 col-md-12 col-sm-12 justify-content-end">
-                                                                <p class="col-lg-11 titillium-web-extralight text12 clgr3"
-                                                                    id="colores">
-                                                                    5 colores</p>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="d-flex col-lg-12 col-md-12 col-sm-12">
-                                                        <div
-                                                            class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row align-items-center">
-                                                            <img src="../../recursos/imagenes/icons/starFill.svg"
-                                                                alt="">
-                                                            <p class="titillium-web-bold text12 m-0 align-baselin clYellowStar mt-1"
-                                                                id="calificacionZapato">
-                                                                5</p>
-                                                        </div>
-                                                        <div
-                                                            class="d-flex col-lg-6 col-md-6 col-sm-6 justify-content-end align-items-center">
-                                                            <h1 class="titillium-web-bold text15 text-black d-flex align-items-center mt-1"
-                                                                id="precioZapato"> $285</h1>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
+
                             </div>
                         </div>
                         <!--DIV PARA LA NAVEGACION ENTRE RESULTADOS-->
@@ -438,14 +324,13 @@
                             <nav aria-label="Page navigation col-lg-10 col-10">
                                 <ul class="pagination col-lg-12 col-12">
                                     <li class="page-item backNext"><a class="page-link" href="#"
-                                            aria-label="ANTERIOR">&laquo;
-                                            ANTERIOR</a></li>
-                                    <li class="page-item num"><a class="page-link num2" href="#">1</a></li>
+                                            aria-label="ANTERIOR">&laquo; ANTERIOR</a></li>
+                                    <!-- Aquí se insertan dinámicamente los números de página -->
+                                    <li class="page-item num active"><a class="page-link num2" href="#">1</a></li>
                                     <li class="page-item num"><a class="page-link num2" href="#">2</a></li>
                                     <li class="page-item num"><a class="page-link num2" href="#">3</a></li>
                                     <li class="page-item backNext"><a class="page-link" href="#"
-                                            aria-label="SIGUIENTE">SIGUIENTE
-                                            &raquo;</a></li>
+                                            aria-label="SIGUIENTE">SIGUIENTE &raquo;</a></li>
                                 </ul>
                             </nav>
                         </div>
